# cosmox-client-tui

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: ui.rs
